--- a/index.html
+++ b/index.html
@@ -35,5 +35,27 @@
             </div>
         </div>
     </div>
+    <script>
+        const apiKey = "b3ffcad66239e48e31820e9c153283f3";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=";
+
+        const searchBox = document.querySelector(".search input");
+        const searchBtn = document.querySelector(".search button");
+
+        async function checkWeather(city) {
+           const response = await fetch(apiUrl + city + `&appid=${apiKey}`); 
+           var data = await response.json();
+              console.log(data);
+
+              document.querySelector(".city").innerHTML = data.name;
+              document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
+              document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+              document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
+        }
+        searchBtn.addEventListener("click", function() {
+            checkWeather(searchBox.value);
+        });
+
+    </script>
 </body>
 </html>
